# k8-client-test

./: Cargo.toml
src/: main.rs
