[package]
name = "k8test"
version = "0.1.0"
authors = ["Nick Cardin <nick@cardin.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8-client = "5.1.4"
k8-types = "0.2.5"
async-std = { version = "1.9.0", features = ["attributes"] }
# fluvio-future = { version = "0.2.0", features = ["timer", "task"] }